# merge-request-quality-validator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyzer.py  docker-compose.yml  main.py  pyproject.toml  repository_parser.py  requirements.txt
app/: gradio_ui.py  main.py
app/modules/: analyzer.py  gh_fetcher.py
notebooks/: gh_fetcher_example.ipynb
