[project]
name = "merge-request-quality-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "argparse>=1.4.0",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "yandex-cloud-ml-sdk>=0.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
]
